--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,30 +3,14 @@ networks:
     driver: bridge
     ipam:
       config:
-        - subnet: 200.0.0.0/16
-          gateway: 200.0.0.1
+        - subnet: 200.0.0.1/16
+          gateway: 200.0.1.1
 volumes:
     postgresql:
     prometheus:
     grafana:
 services:
-# ---------- >> ENVOY << ----------
-  # envoy:
-  #   privileged: true
-  #   image: envoyproxy/envoy:v1.20-latest
-  #   volumes:
-  #   - ./envoy/served-config/envoy.yaml:/etc/envoy/config.yaml 
-  #   - ./envoy/configs/security/tls.crt:/etc/certs/tls.crt
-  #   - ./envoy/configs/security/tls.key:/etc/certs/tls.key
-  #   entrypoint: /usr/local/bin/envoy -c /etc/envoy/config.yaml 
-  #   networks:
-  #     network1:
-  #       ipv4_address: 200.0.0.2
-  #   ports:
-  #   - "8000:8000"
-  #   - "8443:8443"
-  #   - "19000:19000"
-# ---------- >> POSTGRES << ----------
+# #---------- >> POSTGRES << ----------
 #   postgresql:
 #       image: postgres:15.4
 #       hostname: postgresql
@@ -86,60 +70,57 @@ services:
       restart: unless-stopped
       networks:
         network1:
-          ipv4_address: 200.0.0.10
-# ---------- >> GRAFANA << ----------
-  grafana:
-      image: grafana/grafana
-      container_name: grafana
-      # build:
-      #   context: .
-      #   dockerfile: ./grafana/Dockerfile
-      volumes:
-        - grafana:/var/lib/grafana
-        - ./grafana/my_dashboards:/home/grafana/dashboards
-        - ./grafana/defaults.ini:/etc/grafana/grafana.ini
-        - ./grafana/provisioning/dashboards/default.yml:/etc/grafana/provisioning/dashboards/default.yml
-        - ./grafana/provisioning/datasources/default.yml:/etc/grafana/provisioning/datasources/default.yml
-        - ./grafana/provisioning/alerting/default.yml:/etc/grafana/provisioning/alerting/default.yml
-      privileged: true
-      environment:
-          GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD}
-          GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH: /home/grafana/dashboards/postgres.json
-          GF_USERS_ALLOW_SIGN_UP: false
-          GF_PATHS_CONFIG: /etc/grafana/grafana.ini
-      ports:
-          - "${GRAFANA_PORT:-3000}:3000"
-      restart: unless-stopped
-      networks:
-        network1:
-          ipv4_address: 200.0.0.11
-# ---------- >> EXPORTERS << ----------
-  postgresql-exporter:
-      image: prometheuscommunity/postgres-exporter
-      container_name: postgresql-exporter
-      privileged: true
-      ports:
-          - "9187:9187"
-      environment:
-          DATA_SOURCE_NAME: "postgres://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}?sslmode=disable"
-      depends_on:
-          prometheus:
-              condition: service_started
-          postgresql:
-              condition: service_healthy
-      restart: unless-stopped
-      networks:
-          - network1
+          ipv4_address: 200.0.1.18
+# # ---------- >> GRAFANA << ----------
+#   grafana:
+#       image: grafana/grafana
+#       container_name: grafana
+#       volumes:
+#         - grafana:/var/lib/grafana
+#         - ./grafana/my_dashboards:/home/grafana/dashboards
+#         - ./grafana/defaults.ini:/etc/grafana/grafana.ini
+#         - ./grafana/provisioning/dashboards/default.yml:/etc/grafana/provisioning/dashboards/default.yml
+#         - ./grafana/provisioning/datasources/default.yml:/etc/grafana/provisioning/datasources/default.yml
+#         - ./grafana/provisioning/alerting/default.yml:/etc/grafana/provisioning/alerting/default.yml
+#       privileged: true
+#       environment:
+#           GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD}
+#           GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH: /home/grafana/dashboards/postgres.json
+#           GF_USERS_ALLOW_SIGN_UP: false
+#           GF_PATHS_CONFIG: /etc/grafana/grafana.ini
+#       ports:
+#           - "${GRAFANA_PORT:-3000}:3000"
+#       restart: unless-stopped
+#       networks:
+#         network1:
+#           ipv4_address: 200.0.0.11
+# # ---------- >> EXPORTERS << ----------
+#   postgresql-exporter:
+#       image: prometheuscommunity/postgres-exporter
+#       container_name: postgresql-exporter
+#       privileged: true
+#       ports:
+#           - "9187:9187"
+#       environment:
+#           DATA_SOURCE_NAME: "postgres://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}?sslmode=disable"
+#       depends_on:
+#           prometheus:
+#               condition: service_started
+#           postgresql:
+#               condition: service_healthy
+#       restart: unless-stopped
+#       networks:
+#           - network1
 
-  redis-exporter:
-      image: oliver006/redis_exporter
-      container_name: redis-exporter
-      ports:
-        - "9121:9121"
-      environment:
-        REDIS_ADDR: "redis:6379"
-      networks:
-        - network1
-      depends_on:
-        - redis
+#   redis-exporter:
+#       image: oliver006/redis_exporter
+#       container_name: redis-exporter
+#       ports:
+#         - "9121:9121"
+#       environment:
+#         REDIS_ADDR: "redis:6379"
+#       networks:
+#         - network1
+#       depends_on:
+#         - redis
   
