--- a/grafana/provisioning/dashboards/default.yml
+++ b/grafana/provisioning/dashboards/default.yml
@@ -9,3 +9,17 @@ providers:
   type: file
   options:
     path: /home/grafana/dashboards/postgres.json
+- name: 'redis'
+  orgId: 1
+  folder: ''
+  folderUid: ''
+  type: file
+  options:
+    path: /home/grafana/dashboards/redis.json
+- name: 'enoy'
+  orgId: 1
+  folder: ''
+  folderUid: ''
+  type: file
+  options:
+    path: /home/grafana/dashboards/envoy.json
